<resources>
    <string name="app_name">MyApp</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_up">Sign up</string>
    <string name="here1"><u>Already have account? Sing in here!</u></string>
    <string name="here2"><u>Haven`t account? Sing up here!</u></string>
    <string name="sign_in">Login</string>
    <string name="cong">Congratulations</string>
    <string name="logout">Вийти</string>
    <string name="welcome">Welcome</string>
    <string name="somethingGoneWrong">Something gone wrong</string>
    <string name="emailAlreeadyExist">Sorry but such email already used!</string>
    <string name="correctPhone">Phone must be 13 symbols, and starts with +380</string>
    <string name="invalidEmail">Invalid email!</string>
    <string name="correctPassword">Password must be 8+ symbols!</string>
    <string name="pressToExit">Press again to exit</string>
    <string name="emptyFields">Fields are empty!</string>
    <string name="loginSucceful">Login successful</string>
    <string name="pleaseLogin">Please Login!</string>
    <string name="incorrectData">Email Or Password Incorrect! Please Try Again</string>
    <string name="conError">Internet connection losed!</string>
    <string name="close">Close</string>
    <string name="error_message">Error</string>
    <string name="image_uploaded_message">User photo uploaded!</string>
    <string name="username_updated_message">Username is updated!</string>
    <string name="email_updated_message">Email is updated!</string>
    <string name="enter_valid_email_error">Enter valid email</string>
    <string name="enter_username_error">Enter username</string>

    <!-- Tabs titles -->
    <string name="movies">Movies</string>
    <string name="secondTab">Tab #2</string>
    <string name="myProfile">My profile</string>


    <!-- Update profile -->
    <string name="updatePhoto">Update photo</string>
    <string name="updateUsername">Update username</string>
    <string name="updateEmail">Update email</string>
    <string name="photo">user photo</string>
    <string name="email">email</string>
    <string name="username">username</string>

    <!-- Add new film -->
    <string name="filmName_field">Enter name of the film</string>
    <string name="filmAuthor_field">Enter film`s author</string>
    <string name="filmYear_field">Enter film`s year</string>
    <string name="filmDescription_field">Enter film`s description</string>
    <string name="add_newFilm_field">Post new film</string>
    <string name="new_film">Add new film</string>
    <string name="post_request_failed">Post request failed</string>


</resources>
